# -*- mode: org -*-

* v1.3.2

**** Update source code documentation
Update source code documentation / comments

* v1.3.1

**** Remove ~$LOCALBASE~ reference from ~bin/sourcezap~
The ~$LOCALBASE~ reference in ~bin/sourcezap~ has been
replaced with a relative path (similar to earlier changes)

**** Reimplement option parser with getopts
This change reimplements the option parser with getopts.
The previous implementation was complex and custom

* v1.3.0

**** Improve sourcezap.8
There were a few omissions in the man page that have
been updated and corrected

**** Replace ${LOCALBASE} with relative paths
This change replaces the use of ${LOCALBASE} with paths that
are relative to ~$(dirname "${0}")/..~ instead. In the process
two variables (~${localbase}, ${libexec}~) have became one
variable (~${libexec}~)

**** Default to GitHub.com
By default ~sourcezap clone~ now clones from GitHub.com. This
is both faster, and a little more reliable than cloning from
https://git.hardenedbsd.org

The previous default can be restored by setting the environment
variable ~${SOURCEZAP_CLONEURL}~ before running ~sourcezap clone~

**** Revisit log messages
More consistent with other log messages.
See
***** ~fgrep -rn printok libexec/ bin/~
***** ~fgrep -rn printerr libexec/ bin/~

**** Add ~sourcezap sh~ to man page
The ~sourcezap sh~ command was missing from the SYNOPIS section

** Remove ~sourcezap checkout~
Remove the ~sourcezap checkout~ command. It has been replaced
by using ~sourcezap sh~ alongside ~git checkout <branch>~

* v1.2.1

**** Install ~doas.conf~
When ~${PREFIX}/etc/doas.conf~ does not exist the ~setup-doas~
script will try to install ~/usr/local/etc/doas.conf~ with
~root:wheel~ as the owner, and with ~u=rw,go=~ as the filemode

**** Log when ~sourcezap rm~ completes successfully
Similar to other commands, log when the ~sourcezap rm~ command
completes successfully

**** Format log messages with program name